Including Denacast CDN-P2P scenario in omnetpp.ini

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,3 +1,13 @@
+[General]
+**.underlayConfigurator.gracefulLeaveDelay = 15s
+**.underlayConfigurator.gracefulLeaveProbability = 0
+sim-time-limit = 200s
+**.numTiers = 2
+**.accessNet.channelTypes = "oversim.common.denacast_channel"
+**.queueType = "inet.linklayer.queue.DropTailQueue"
+**.tier1.queue.frameCapacity = 1000
+**.ppp[*].queue.frameCapacity = 1000
+
 [Config Chord]
 description = Chord (iterative, SimpleUnderlayNetwork)
 *.underlayConfigurator.churnGeneratorTypes = "oversim.common.LifetimeChurn"
@@ -18,9 +28,7 @@ InetUnderlayNetwork.accessRouterNum = 1
 description = DenaCast (CDN-P2Ptracker, DenaCastApp, MPEG4Camera, MPEG4Player)
 
 network = oversim.underlay.inetunderlay.InetUnderlayNetwork2
-InetUnderlayNetwork2.backboneRouterNum = 1
-InetUnderlayNetwork2.overlayAccessRouterNum = 1
-InetUnderlayNetwork2.accessRouterNum = 1
+
 
 #network = oversim.underlay.inetunderlay.BriteIPv4Network
 #network = oversim.underlay.inetunderlay.GTITM_TS_IPv4Network
@@ -28,7 +36,7 @@ InetUnderlayNetwork2.accessRouterNum = 1
 SimpleUnderlayNetwork.churnGenerator[2].channelTypesTx = "oversim.common.denacast_channel"
 SimpleUnderlayNetwork.churnGenerator[2].channelTypesRx = "oversim.common.source_channel"
 
-**.churnGenerator[1].targetOverlayTerminalNum = 5
+**.churnGenerator[1].targetOverlayTerminalNum = 7
 
 **.overlay.simplemesh.FEC = false
 **.overlay.simplemesh.ARQ = false
@@ -453,5 +461,8 @@ description = TCPExampleApp (InetUnderlayNetwork)
 **.overlayType = "oversim.applications.i3.OverlayDummyModules"
 **.tier1Type = "oversim.applications.tcpexampleapp.TCPExampleAppModules" 
 **.targetOverlayTerminalNum = 2
+
+
+include ./denacast.ini
 
 include ./default.ini
