Including Denacast CDN-P2P scenario

--- a/simulations/denacast.ini
+++ b/simulations/denacast.ini
@@ -5,7 +5,7 @@ cmdenv-express-mode = true
 record-eventlog = false
 **.vector-recording=false
 #seed-set = ${processid}
-#repeat = 4
+#repeat = 3
 
 
 # ************ InetUnderlay2 backbone configurationv  **************************
@@ -42,7 +42,7 @@ BriteIPv4Network.churnGenerator[*].channelTypesRx = ""
 # ************ GTITM_TS_IPv4Network backbone configuration **************************
 
 GTITM_TS_IPv4Network.underlayConfigurator.terminalTypes = "oversim.underlay.inetunderlay.InetOverlayHost"
-GTITM_TS_IPv4Network.*ccessRouter[*].accessNet.channelTypesTx = "oversim.common.denacast_channel"
+GTITM_TS_IPv4Network.*ccessRouter[*].accessNet.channelTypes = "oversim.common.denacast_channel"
 GTITM_TS_IPv4Network.*ccessRouter[*].accessNet.channelTypesRx = "oversim.common.source_channel"
 GTITM_TS_IPv4Network.backboneRouterNum = 28
 GTITM_TS_IPv4Network.overlayBackboneRouterNum = 0
@@ -99,7 +99,7 @@ SimpleUnderlayNetwork.churnGenerator[1].channelTypesRx = "oversim.common.source_
 **.churnGenerator[2].lifetimeMean = 200s
 **.churnGenerator[2].initPhaseCreationInterval = 1s
 
-**.churnGenerator[2].targetOverlayTerminalNum = 100
+**.churnGenerator[2].targetOverlayTerminalNum = ${50,70,100,120,150,170}
 **.churnGenerator[2].tier2Type = "oversim.tier2.videoplayer.MPEG4PlayerModules"
 **.churnGenerator[2].overlayType = "oversim.overlay.simplemesh.SimpleMeshModules"
 **.churnGenerator[2].tier1Type = "oversim.applications.denacastapp.DenaCastAppModules"
@@ -111,7 +111,7 @@ SimpleUnderlayNetwork.churnGenerator[1].channelTypesRx = "oversim.common.source_
 #****************** DenaCastApp settings *******************
 **.windowOfIntrest = 40s 		#How much video is maintain in peer buffer (Window of intrest)
 **.denacastapp.bufferMapExchangePeriod = 1s		
-**.denacastapp.startUpBuffering = 12s
+**.denacastapp.startUpBuffering = 8s
 **.denacastapp.rateControl = true
 **.denacastapp.receiverSideSchedulingNumber = 2
 **.denacastapp.senderSideSchedulingNumber = 1
@@ -120,8 +120,8 @@ SimpleUnderlayNetwork.churnGenerator[1].channelTypesRx = "oversim.common.source_
 
 #******************overlay settings*******************
 
-**.overlay.simplemesh.activeNeighbors = 3
-**.overlay.simplemesh.passiveNeighbors = 3
+**.overlay.simplemesh.activeNeighbors = 5
+**.overlay.simplemesh.passiveNeighbors = 5
 **.overlay.simplemesh.neighborNotificationPeriod = 2s
 **.overlay.simplemesh.packetUnit = 1000 Byte
 **.overlay.simplemesh.sourceBandwidth = 8 Mbps 
@@ -131,4 +131,6 @@ SimpleUnderlayNetwork.churnGenerator[1].channelTypesRx = "oversim.common.source_
 **.overlay.simplemesh.pMax = 0.001
 
 #******************Tracker settings*******************
-**.overlay.cdnp2ptracker.connectedMesh =false 
+**.overlay.cdnp2ptracker.connectedMesh =true
+
+include ./GTITM_TS_InetUnderlay.ned-ASIDs.ini
