Including Denacast CDN-P2P scenario

--- a/simulations/default.ini
+++ b/simulations/default.ini
@@ -1,6 +1,8 @@
 [General]
+
+**.param-record-as-scalar = false
 **.networkConfiguratorModule = ""
-ned-path = ../../inetmanet-2.2/inetmanet-2.0/src;../src
+ned-path = ../../inetmanet-2.0/src;../src
 # Use the following ned-path if you need ReaSE background traffic
 #ned-path = ../../INET-OverSim-20101019/src;../src;../../ReaSE/src
 
@@ -660,4 +662,4 @@ ReaSEUnderlayNetwork.churnGenerator*.channelTypesRx = "" # not used in ReaSEUnde
 **.tier1Type = "oversim.applications.kbrtestapp.KBRTestAppModules"
 **.tier2Type = "oversim.common.TierDummy"
 **.tier3Type = "oversim.common.TierDummy"
-**.numTiers = 1
+**.numTiers = 2
